force-app/main/default/objects/Position__c/Position__c.object-meta.xml
<CustomObject>
    <description>Create the Position object in Recruitment app</description>
    <label>Position</label>
    <nameField>
        <label>Position Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Positions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>