force-app/main/default/objects/Position__c/fields/Educational_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Educational_Requirements__c</fullName>
    <label>Educational Requirements</label>
    <type>TextArea</type>
</CustomField>