force-app/main/default/objects/Position__c/fields/Multi_select_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Multi_select_Picklist__c</fullName>
    <label>Multi select Picklist</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bangalore</fullName>
            </value>
            <value>
                <fullName>Dharwad</fullName>
            </value>
            <value>
                <fullName>Hubli</fullName>
            </value>
            <value>
                <fullName>Navalur</fullName>
            </value>
            <value>
                <fullName>Pune</fullName>
            </value>
            <value>
                <fullName>Delhi</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>