force-app/main/default/objects/Position__c/fields/Responsibilites__c.field-meta.xml
<CustomField>
    <fullName>Responsibilites__c</fullName>
    <label>Responsibilites</label>
    <type>TextArea</type>
</CustomField>