force-app/main/default/objects/Position__c/fields/Test_Global_Value_set__c.field-meta.xml
<CustomField>
    <fullName>Test_Global_Value_set__c</fullName>
    <label>Test Global Value set</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Global_Value_Set</valueSetName>
    </valueSet>
</CustomField>