force-app/main/default/objects/Position__c/fields/Test_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Test_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Test Lookup</label>
    <referenceTo>Candidate__c</referenceTo>
    <relationshipLabel>Positions (Test Lookup)</relationshipLabel>
    <relationshipName>Positions1</relationshipName>
    <type>Lookup</type>
</CustomField>