force-app/main/default/objects/Position__c/fields/Text_Rich__c.field-meta.xml
<CustomField>
    <fullName>Text_Rich__c</fullName>
    <label>Text (Rich)</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>