force-app/main/default/objects/Position__c/fields/UI_Developer__c.field-meta.xml
<CustomField>
    <fullName>UI_Developer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>UI Developer</label>
    <type>Checkbox</type>
</CustomField>