force-app/main/default/objects/Position__c/recordTypes/IT.recordType-meta.xml
<RecordType>
    <fullName>IT</fullName>
    <active>true</active>
    <label>IT</label>
</RecordType>