force-app/main/default/objects/Position__c/recordTypes/NON_IT.recordType-meta.xml
<RecordType>
    <fullName>NON_IT</fullName>
    <active>true</active>
    <label>NON IT</label>
</RecordType>