force-app/main/default/objects/Position__c/validationRules/Open_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Open_Date</fullName>
    <active>true</active>
    <errorConditionFormula>Close_Date__c  &lt;=  Open_Date__c</errorConditionFormula>
    <errorDisplayField>Close_Date__c</errorDisplayField>
    <errorMessage>Close date should be more than Open date.</errorMessage>
</ValidationRule>