force-app/main/default/objects/Position__c/validationRules/Position_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Position_Status</fullName>
    <active>false</active>
    <description>Position Status.</description>
    <errorConditionFormula>ISPICKVAL(Status__c,&quot;&quot;) || ISPICKVAL(Type__c, &quot;&quot;)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Please select Status &amp; Type of Position.</errorMessage>
</ValidationRule>