force-app/main/default/objects/Position__c/validationRules/Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Status</fullName>
    <active>true</active>
    <errorConditionFormula>RecordTypeId  = &apos;0120o000001Jg2Z&apos;  &amp;&amp;  ISCHANGED( Status__c )</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Don&apos;t change the Status</errorMessage>
</ValidationRule>